--- a/src/my-app.html
+++ b/src/my-app.html
@@ -76,9 +76,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <!-- Drawer content -->
       <app-drawer id="drawer" slot="drawer">
         <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
-          <a name="Background" href="Background">Resume</a>
-          <a name="Sample" href="Sample"> Samples</a>
-          <a name="Experience" href="Experience">TBA</a>
+          <a name="Sample" href="Sample"> Home</a>
+          <a name="jukebox-admin" href="http://localhost:1337/auth/doauth?q=add">Admin</a>
+          <a name="jukebox" href="http://localhost:1337/auth/doauth?q=playlist">Generator</a>
         </iron-selector>
       </app-drawer>
 
