service worker workaround

--- a/src/my-app.html
+++ b/src/my-app.html
@@ -96,7 +96,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <iron-pages selected="[[page]]" attr-for-selected="name" fallback-selection="view404" role="main">
           <wto-background name="Background"></wto-background>
           <wto-experience name="Experience"></wto-experience>
-          <wto-sample name="Sample"></wto-sample>
+          <wto-sample name="sample"></wto-sample>
           <wto-jukebox-admin name="jukebox-admin"></wto-jukebox-admin>
           <wto-jukebox name="jukebox"></wto-jukebox>
           <my-view404 name="view404"></my-view404>
