--- a/src/wto-sample.html
+++ b/src/wto-sample.html
@@ -64,7 +64,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         color: black;
       }
     </style>
-    <iron-ajax id="initialAuthentication" handle-as="json" url="http://frozen-basin-45731.herokuapp.com/auth/doAuth" on-response="_handleAuthResponse"></iron-ajax>
+    <iron-ajax id="initialAuthentication" handle-as="json" url="https://frozen-basin-45731.herokuapp.com/auth/doAuth" on-response="_handleAuthResponse"></iron-ajax>
     <iron-ajax id="authRedirect" handle-as="json" on-response="_handleAuthCallback"></iron-ajax>
 
     <div class="card">
@@ -76,7 +76,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <strong> Admin </strong>
           <p> Add songs from spotify and create new playlist attributes and micro genres upon which users can create their playlists.
           </p>
-          <a href="http://frozen-basin-45731.herokuapp.com/auth/doauth?q=add">
+          <a href="https://frozen-basin-45731.herokuapp.com/auth/doauth?q=add">
             <paper-button class="adminButton" raised>
               <iron-icon icon="icons:build"></iron-icon>
             </paper-button>
@@ -87,7 +87,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <strong> Playlist Generator </strong>
           <p> Create a playlist based on micor genres and admin added attributes.
           </p>
-          <a href="http://frozen-basin-45731.herokuapp.com/auth/doauth?q=playlist">
+          <a href="https://frozen-basin-45731.herokuapp.com/auth/doauth?q=playlist">
             <paper-button class="spotifyButton">
               <img class="spotifyLogo" src="../images/spotify.png">
             </paper-button>
