about the project in /sample

--- a/src/wto-jukebox-admin.html
+++ b/src/wto-jukebox-admin.html
@@ -364,8 +364,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         let songObj = {}
         let attributes = this.$.attrSelect.selectedItems
         songObj.attributes = attributes.map(attr => attr.value);
+        this.$.attrSelect.selectedItems = []
         let genres = this.$.genreSelect.selectedItems
         songObj.genres = genres.map(genre => genre.value);
+        this.$.genreSelect.selectedItems = [];
         songObj.spotify_id = this.selectedSong.id;
         this.$.createSong.body = songObj;
         this.$.createSong.method = 'POST';
