--- a/src/my-app.html
+++ b/src/my-app.html
@@ -77,8 +77,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <app-drawer id="drawer" slot="drawer">
         <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
           <a name="sample" href="sample"> Home</a>
-          <a name="jukebox-admin" href="https://frozen-basin-45731.herokuapp.com/auth/doauth?q=add">Admin</a>
-          <a name="jukebox" href="https://frozen-basin-45731.herokuapp.com/auth/doauth?q=playlist">Generator</a>
+          <a name="jukebox-admin" href="[[SERVER]]auth/doauth?q=add">Admin</a>
+          <a name="jukebox" href="[[SERVER]]auth/doauth?q=playlist">Generator</a>
         </iron-selector>
       </app-drawer>
 
