--- a/src/wto-jukebox-admin.html
+++ b/src/wto-jukebox-admin.html
@@ -125,15 +125,15 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <iron-ajax id="getUser" handle-as="json" url="https://api.spotify.com/v1/me" headers="[[token]]" on-response="handleUserResponse"
       auto></iron-ajax>
     <iron-ajax id="spotifySearch" handle-as="json" headers="[[token]]" on-response="handleSearchResponse"></iron-ajax>
-    <iron-ajax id="createAttribute" url="https://frozen-basin-45731.herokuapp.com/jukeBox/createAttribute" handle-as="json" content-type="application/json"
+    <iron-ajax id="createAttribute" url="[[SERVER]]jukeBox/createAttribute" handle-as="json" content-type="application/json"
       on-response="handleCreateAttributeResponse"></iron-ajax>
-    <iron-ajax id="createGenre" url="https://frozen-basin-45731.herokuapp.com/jukeBox/createGenre" handle-as="json" content-type="application/json"
+    <iron-ajax id="createGenre" url="[[SERVER]]jukeBox/createGenre" handle-as="json" content-type="application/json"
       on-response="handleCreateGenreResponse"></iron-ajax>
-    <iron-ajax id="getAttributes" url="https://frozen-basin-45731.herokuapp.com/jukeBox/getAttributes" handle-as="json" content-type="application/json"
+    <iron-ajax id="getAttributes" url="[[SERVER]]jukeBox/getAttributes" handle-as="json" content-type="application/json"
       on-response="handleGetAttributes" auto></iron-ajax>
-    <iron-ajax id="getGenres" url="https://frozen-basin-45731.herokuapp.com/jukeBox/getGenres" handle-as="json" content-type="application/json"
+    <iron-ajax id="getGenres" url="[[SERVER]]jukeBox/getGenres" handle-as="json" content-type="application/json"
       on-response="handleGetGenres" auto></iron-ajax>
-    <iron-ajax id="createSong" url="https://frozen-basin-45731.herokuapp.com/jukeBox/createSong" handle-as="json" content-type="application/json"
+    <iron-ajax id="createSong" url="[[SERVER]]jukeBox/createSong" handle-as="json" content-type="application/json"
       on-response="handleCreateSongResponse"></iron-ajax>
     <paper-dialog on-dialog-confirm="_createSong" class="sendToTheFore" id="modal">
       <br>
