--- a/src/wto-sample.html
+++ b/src/wto-sample.html
@@ -75,6 +75,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <iron-form>
         <form method="get" action="/form/handler">
           <h2> Song Rating and Playlist Generation App </h2>
+          <p>Note: Server hosted via free (slow) Heroku hosting, click on either link below to visit the Admin or Generator pages.</p>
+          <p><i> This requires authenticating with Spotify. </i></p>
           <div>
           <a href="https://frozen-basin-45731.herokuapp.com/auth/doauth?q=add">
             <paper-button id="adminButton" class="adminButton" raised>
