--- a/src/wto-jukebox-admin.html
+++ b/src/wto-jukebox-admin.html
@@ -135,6 +135,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       on-response="handleGetGenres" auto></iron-ajax>
     <iron-ajax id="createSong" url="https://frozen-basin-45731.herokuapp.com/jukeBox/createSong" handle-as="json" content-type="application/json"
       on-response="handleCreateSongResponse"></iron-ajax>
+    <paper-dialog class="sendToTheFore" id="confirmationModal">
+    <br>
+      <strong> Thank you! </strong>
+    <p> Your track has been added to the Jukebox! </p>
+      <paper-button dialog-confirm autofocus>Continue</paper-button>
+    </paper-dialog>
     <paper-dialog on-dialog-confirm="_createSong" class="sendToTheFore" id="modal">
       <br>
       <strong>[[selectedSong.name]]</strong>
@@ -253,7 +259,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <paper-input id="attrDescription" label="Description"></paper-input>
         <i>[[attrLog]]</i>
         <div>
-          <paper-button class="attrBttn" on-tap="_addAttribute" raised>Submit</paper-button>
+          <paper-button class="attrBttn" on-tap="_createAttribute" raised>Submit</paper-button>
         </div>
       </form>
     </div>
@@ -267,7 +273,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <paper-input id="genDescription" label="Description"></paper-input>
         <i>[[genLog]]</i>
         <div>
-          <paper-button class="attrBttn" on-tap="_addGenre" raised>Submit</paper-button>
+          <paper-button class="attrBttn" on-tap="_createGenre" raised>Submit</paper-button>
         </div>
       </form>
     </div>
@@ -288,7 +294,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
               return tokenObj;
             }
           },
-          userName: String,
           selectedSong: {
             type: Object,
             notify: true
@@ -297,23 +302,14 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             type: Array,
             notify: true,
           },
-
           routeData: Object
         }
       }
       ready() {
         super.ready();
-        // When possible, use afterNextRender to defer non-critical
-        // work until after first paint.
         Polymer.RenderStatus.afterNextRender(this, function () {
           this.set('formStyling', 'hideForm')
         });
-      }
-      _redirectPlaylist() {
-        this.$.initialAuthentication.generateRequest();
-      }
-      logChanges(e) {
-
       }
       _getArtistName(a) {
         var artist = a[0];
@@ -333,41 +329,45 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         return href;
       }
       _expandItem(e) {
+        // open modal for selected song
         this.set('selectedSong', e.model.item)
         this.$.modal.open()
-
       }
       _loadData() {
+        // load data from spotify search query 
         var encodedSearchTerm = encodeURIComponent(this.search);
         this.$.spotifySearch.url = 'https://api.spotify.com/v1/search?type=track&q=' + encodedSearchTerm
         this.$.spotifySearch.generateRequest();
       }
-      _addAttribute() {
+      _createAttribute() {
         let attribute = {};
         attribute.name = this.$.attrName.value;
         attribute.description = this.$.attrDescription.value;
-
         this.$.createAttribute.body = attribute;
         this.$.createAttribute.method = 'POST';
         this.$.createAttribute.generateRequest();
       }
-      _addGenre() {
+      _createGenre() {
         let genre = {};
         genre.name = this.$.genName.value;
         genre.description = this.$.genDescription.value;
-
         this.$.createGenre.body = genre;
         this.$.createGenre.method = 'POST';
         this.$.createGenre.generateRequest();
       }
       _createSong(e) {
         let songObj = {}
+        // Get selected attribute IDS
         let attributes = this.$.attrSelect.selectedItems
         songObj.attributes = attributes.map(attr => attr.value);
+        // Deselect items
         this.$.attrSelect.selectedItems = []
+        // Get selected genre IDS
         let genres = this.$.genreSelect.selectedItems
         songObj.genres = genres.map(genre => genre.value);
+        // Deselect items
         this.$.genreSelect.selectedItems = [];
+        // Get song spotify id
         songObj.spotify_id = this.selectedSong.id;
         this.$.createSong.body = songObj;
         this.$.createSong.method = 'POST';
@@ -380,7 +380,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         this.set('genres', e.detail.response);
       }
       handleCreateAttributeResponse(e) {
-        console.log(e.detail.response)
         if (e.detail.response.name) {
           this.set('attrLog', 'Thank you for your submission. ')
           this.$.attrName.value = "";
@@ -391,7 +390,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         }
       }
       handleCreateGenreResponse(e) {
-        console.log(e.detail.response)
         if (e.detail.response.name) {
           this.set('genLog', 'Thank you for your submission. ')
           this.$.genName.value = "";
@@ -402,7 +400,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         }
       }
       handleCreateSongResponse(e) {
-        console.log(e.detail.response)
+        this.$.confirmationModal.open()
       }
       handleSearchResponse(e) {
         var response = e.detail.response;
