--- a/src/wto-jukebox.html
+++ b/src/wto-jukebox.html
@@ -23,6 +23,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="./../bower_components/paper-listbox/paper-listbox.html">
 <link rel="import" href="./../bower_components/isw-dropdown-menu/isw-dropdown-menu.html">
 <link rel="import" href="./shared-styles.html">
+<link rel="lazy-import" href="./wto-login.html">
+
 
 
 <dom-module id="wto-jukebox">
@@ -70,14 +72,16 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         </style>
         <iron-ajax id="getUser" handle-as="json" url="https://api.spotify.com/v1/me" headers="[[token]]" on-response="handleUserResponse"
             auto></iron-ajax>
-        <iron-ajax id="getAttributes" url="https://frozen-basin-45731.herokuapp.com/jukeBox/getAttributes" handle-as="json" content-type="application/json"
+        <iron-ajax id="getAttributes" url="[[server]]/jukeBox/getAttributes" handle-as="json" content-type="application/json"
             on-response="handleGetAttributes" auto></iron-ajax>
-        <iron-ajax id="getGenres" url="https://frozen-basin-45731.herokuapp.com/jukeBox/getGenres" handle-as="json" content-type="application/json"
+        <iron-ajax id="getGenres" url="[[server]]/jukeBox/getGenres" handle-as="json" content-type="application/json"
             on-response="handleGetGenres" auto></iron-ajax>
         <iron-ajax id="createPlaylist" method="POST" headers="[[token]]" handle-as="json" content-type="application/json" on-response="handlePlaylistResponse"></iron-ajax>
         <iron-ajax id="addSongsToPlaylist" method="POST" headers="[[token]]" handle-as="json" content-type="application/json" on-response="handlePlaylistResponse"></iron-ajax>
         <iron-ajax id="getSongs" handle-as="json" content-type="application/json" on-response="handleSongResponse"></iron-ajax>
         <div class="card">
+            <wto-login></wto-login>
+
             <h2>Generate A Playlist</h2>
             <br>
             <strong> Pick a Genre </strong>
@@ -133,6 +137,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                         }
                     },
                     rootPath: String,
+                    server:{
+                        type: String,
+                        notify: true
+                    }
                 };
             }
             handleUserResponse(e) {
@@ -161,7 +169,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                 search.attributes = attributes.map(attr => attr.value);
                 search.genres = genres.map(genre => genre.value)
                 this.$.getSongs.method = 'POST';
-                this.$.getSongs.url = 'https://frozen-basin-45731.herokuapp.com/jukebox/getSongs';
+                this.$.getSongs.url = this.server + '/jukebox/getSongs';
                 this.$.getSongs.body = search;
                 this.$.getSongs.generateRequest()
             }
