switch to production url

--- a/src/my-app.html
+++ b/src/my-app.html
@@ -129,8 +129,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           subroute: String,
           serverURL:{
             type: String,
-            // value: "https://frozen-basin-45731.herokuapp.com"
-            value: "http://localhost:1337"
+            value: "https://frozen-basin-45731.herokuapp.com"
+            // value: "http://localhost:1337"
           }
         };
       }
